--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,7 @@
 </head>
 <body>
   <h2>Hello Express and EJS -- <%= answer %></h2>
+  <div id="root">loading...............</div>
+  <script src="/bundle.js" ></script>
 </body>
 </html>
