--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <title>Advanced React Application Example</title>
 </head>
 <body>
-  <div id="root">loading...............</div>
+  <div id="root"><%- answers -%></div>
   <script src="/bundle.js" ></script>
 </body>
 </html>
