--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Advanced React Application Example</title>
+  <script type="text/javascript">
+  window.initialData=<%-JSON.stringify(initialData)-%>;
+  </script>
 </head>
 <body>
-  <div id="root"><%-answers-%></div>
+  <div id="root"><%-initialMarkup-%></div>
   <script src="/bundle.js" ></script>
 </body>
 </html>
